--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,5 +2,7 @@
   "attachmentFolderPath": "./resources",
   "readableLineLength": true,
   "newFileLocation": "current",
-  "propertiesInDocument": "hidden"
+  "propertiesInDocument": "hidden",
+  "useMarkdownLinks": true,
+  "newLinkFormat": "absolute"
 }
