add: CSS files for session-note recording widget

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -2,6 +2,7 @@
   "nativeMenus": false,
   "enabledCssSnippets": [
     "badges",
-    "multi-column"
+    "multi-column",
+    "session-notes"
   ]
 }
